--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,6 +19,7 @@
       "@/lib/*": ["lib/*"],
       "@/utils/*": ["utils/*"],
       "@/locales/*": ["locales/*"],
+      "@/hooks/*": ["hooks/*"],
     },
 
     /* Bundler mode */
